# MARTE

./: .dockerignore  .gitignore  Dockerfile  VISION.md  pyproject.toml
frontend/: index.html  netlify.toml  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: EnergyDisplay.tsx  ExportPanel.tsx  FuelBudgetPanel.tsx  GRDiagnosticsPanel.tsx  MinkowskiDiagram.tsx  ModeToggle.tsx  OrbitalView.tsx  ParameterPanel.tsx  ParetoFrontPanel.tsx  PerturbationPanel.tsx  ProperTimeCurve.tsx  ResidualMonitor.tsx  ResultsPanel.tsx  SolutionPicker.tsx  SweepConfigPanel.tsx  SweepResultsPanel.tsx  (+1 more)
marte/: __init__.py  acceleration.py  constants.py  ephemeris.py  export.py  general_relativity.py  gravity.py  jerk_profiles.py  optimization.py  orbital.py  plotting.py  propulsion.py  relativity.py  solver.py  solver_v2.py  spacetime.py  sweep.py  targets.py  trajectory.py  validation.py
scripts/: compute_trajectory.py  dev.sh  validate_ephemeris.py
server/: main.py  schemas.py
tests/: conftest.py  test_acceleration.py  test_api.py  test_constants.py  test_ephemeris.py  test_export.py  test_general_relativity.py  test_gr_integration.py  test_gravity.py  test_integration.py  test_jerk_profiles.py  test_multi_solution.py  test_numerical_stability.py  test_optimization.py  test_orbital.py  test_orbital_elliptical.py  test_phase5_integration.py  test_propulsion.py  test_relativity.py  test_solver.py  test_solver_v2.py  test_spacetime.py  test_sweep.py  test_targets.py  test_trajectory.py  test_validation.py
(+10 files in other folders)
